kubernetes/03-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: assignment-demo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLables:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name:  postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser"]
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: pgdata
              mountpath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: assignment-demo
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
